Control panel actions implemented (add user, etc.)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1505,7 +1505,10 @@
 		}
 
 /* Forms */
-
+	#login_form input {
+		text-align: center;
+		margin: 0 auto;
+	}
 	form label {
 		display: block;
 		margin: 0 0 1em 0;
